# buddy-cli

./: .gitignore  ARCHITECTURE.md  Makefile  README.md  install.sh  pyproject.toml
bud/: __init__.py  bud_mcp.py  cli.py  config.py  mcp_logger.py
bud/lib/: __init__.py  embeddings.py  errors.py  llm.py  model_registry.py  progress.py  prompt_loader.py  schema_manager.py  store.py
bud/prompts/: conversational.md  factual.md  mythic.md  synthesis.md
bud/scripts/: concat_code.py
bud/stages/: __init__.py  blend.py  chunk.py  chunk_refine.py  chunk_validate.py  discover.py  discover_validate.py  embed.py  index.py  parse.py
buddy/: __init__.py  app.py
buddy/core/: config.py  events.py  plugin.py  session.py
buddy/plugins/: chat.py  config_plugin.py  help.py  input.py  logger.py  renderer.py
docs/: mcp.md
tests/: test_blend.py  test_bud_mcp.py  test_buddy_app.py  test_buddy_chat.py  test_buddy_config.py  test_buddy_events.py  test_buddy_help.py  test_buddy_logger.py  test_buddy_plugin.py  test_buddy_renderer.py  test_buddy_session.py  test_chunk.py  test_chunk_refine.py  test_chunk_validate.py  test_config.py  test_discover.py  test_discover_validate.py  test_docs_mcp.py  test_embed.py  test_errors.py  test_mcp_logger.py  test_model_registry.py  test_parse.py  test_progress.py  test_prompt_loader.py  test_pyproject.py  test_schema_manager.py  test_store.py
